-bug#0002071: MySQL table poller_item is dropped always when "Data Input Method" is changed or added.
-bug#0002079: Using input field of a script in graph title doesn't work 
-bug#0002080: Database password containing "@" does not connect
-bug#0002083: When adding a new users, apache generates errors
-bug#0002084: Incorrect normalisation of hrStorageTable values over 2^31
-bug: Update host template cli script help shows incorrect options
-bug: remove graph permissions if graph is removed
-bug: remove host permissions if host is removed
-bug: add_tree.php did not allow nodes with propagating sort options
-bug: when adding a tree node via the api numeric and natural were reversed
-bug: Some snmp agents don't getnext on '.1' and need another oid '.1.3'
-bug: Remove call pass by reference from function declarations
-bug: Special Type Code 'host_id' available in Data Queries by Not Data Input Methods
-bug: Dont generate error messages when creating non host based graphs
-bug: When creating new graphs without a data source, print error to user instead of throwing php error
-bug: Browser query string does not contain arguments
-bug: inject_form_variables does not operate if more than 1 variable needs replacing
-bug: GRPINT now supporting AVERAGE, LAST, MAX and MIN correctly (MAX of MAX, MAX of AVERAGEs now possible)
-bug: verify DS MAX value on data source create (courtesy Fireball)
-bug: Logarithmic Scaling and units-si dependencies fixed (thanks to ke6oms)
-bug: Turn off process leveling if there are not enough poller items to substantiate it
-bug: allow empty [upper|lower]_limit even without autoscaling
-bug: Availability method Ping or SNMP generates meaningless warnings
-bug: Warning in lib/snmp.php by misspelled variable
-bug: fix SQL error on api_reapply_suggested_graph_title for non-data-query graphs
-bug: correct grep'ing of icmp[s|r]eq required for newer linux versions (e.g. Fedora 14)